--- a/app/src/main/res/layout/activity_edit_payment_plans.xml
+++ b/app/src/main/res/layout/activity_edit_payment_plans.xml
@@ -215,7 +215,7 @@
                 android:layout_width="0dp"
                 android:layout_height="26dp"
                 android:fontFamily="@font/sofia_regular"
-                android:text="Card Ending in:"
+                android:text="No Card Added"
                 android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="13sp"
